# FastAPI_tutorial

./: main.py  pyproject.toml
