[tool.poetry]
name = "fastapi_tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
httpie = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
